<resources>
    <string name="app_name">DRAWER_TRY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Click here to set image</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search movie</string>
    <string name="menu_watchlist">Watchlist</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_changeuser">Change User</string>
    <string name="slideshow">slideshow</string>
    <string name="menu_idk">idk</string>
    <string name="menu_slideshow">slideshow</string>
    <string name="menu_setting">Sing up / Login </string>
    <string name="menu_love">Watchlist</string>
    <string name="menu_random">Random movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_About">About</string>
    <string name="action_logout">Logout</string>
    <string name="action_login">Login</string>
    <string name="me">you</string>
    <string name="friends">friends</string>
    <string name="add_friends">add friends</string>

</resources>