<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_movie_24"
            android:title="@string/menu_home" />


        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_autorenew_24"
            android:title="@string/menu_random" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_watchlist"
            android:icon="@drawable/ic_baseline_star_24"
            android:title="@string/menu_love" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_logout" />

    </group>
</menu>